@@ -135,8 +135,9 @@ func (eb *Winlogbeat) Run(b *beat.Beat) error {
 		debugf("Initializing EventLog[%s]", eventLogConfig.Name)
 
 		eventLog, err := eventlog.New(eventlog.Config{
-			Name: eventLogConfig.Name,
-			API:  eventLogConfig.API,
+			Name:          eventLogConfig.Name,
+			API:           eventLogConfig.API,
+			BatchReadSize: eventLogConfig.BatchReadSize,
 		})
 		if err != nil {
 			return fmt.Errorf("Failed to create new event log for %s. %v",
