@@ -1,3 +1,6 @@
+:vista_and_newer: This option is only available on operating systems +
+  supporting the Windows Event Log API (Microsoft Windows Vista and newer).
+
 [[configuration-winlogbeat-options]]
 === Winlogbeat
 
@@ -53,6 +56,17 @@ winlogbeat:
   event_logs:
     - name: Application
 --------------------------------------------------------------------------------
+
+===== event_logs.batch_read_size
+
+The maximum number of event log records to read from the Windows API in a single
+batch. The default batch size is 100. *{vista_and_newer}*
+
+Winlogbeat starts a goroutine (a lightweight thread) to read from each
+individual event log. The goroutine reads a batch of event log records using the
+Windows API, applies any processors to the events, publishes them to the
+configured outputs, and waits for an acknowledgement from the outputs before
+reading additional event log records.
 
 [[configuration-winlogbeat-options-event_logs-name]]
 ===== event_logs.name
