@@ -47,6 +47,8 @@ https://github.com/elastic/beats/compare/v1.3.1...1.3[Check the HEAD diff]
 
 *Winlogbeat*
 
+- Add `event_logs.batch_read_size` configuration option. {pull}2642[2642]
+
 ==== Deprecated
 
 *Affecting all Beats*
